[package]
name = "watchguard-bruteforce"
version = "0.1.0"
description = "A CLI tool to brute force the authentication signature of WatchGuard's Firebox"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
