[package]
name = "firebox-auth-cracker"
version = "0.1.0"
description = "A CLI tool to brute force the authentication signature of WatchGuard's Firebox"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/firebox-auth-cracker"
repository = "https://github.com/orhun/firebox-auth-cracker"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
sha1 = "0.10.5"
hex = "0.4.3"
thiserror = "1.0.38"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
